--- a/jumble/package.json
+++ b/jumble/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "next": "^9.4.4",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
