--- a/jumble/package.json
+++ b/jumble/package.json
@@ -16,12 +16,14 @@
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-jsx": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.26",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-jsx": "^2.2.8",
     "@types/webpack": "^4.41.21",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
