--- a/jumble/package.json
+++ b/jumble/package.json
@@ -10,9 +10,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.27",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "babel-plugin-emotion": "^10.0.33",
+    "emotion": "^10.0.27",
+    "emotion-server": "^10.0.27",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
