--- a/jumble/package.json
+++ b/jumble/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "develop": "NODE_OPTIONS='--inspect' next",
     "lint": "eslint --ext .ts,.tsx src/**",
+    "test": "jest",
     "build": "next build",
     "start": "next start"
   },
@@ -26,6 +27,7 @@
     "styled-jsx": "^3.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.7",
     "@types/node": "^14.0.26",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
@@ -38,11 +40,31 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "jest": "^26.1.0",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.1.3",
     "typescript": "^3.9.7"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/__tests__/**/*.test.ts"
+    ]
   }
 }
