--- a/jumble/package.json
+++ b/jumble/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.0",
     "babel-plugin-emotion": "^10.0.33",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
