--- a/jumble/package.json
+++ b/jumble/package.json
@@ -18,11 +18,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
+    "apollo-boost": "^0.4.9",
     "babel-plugin-emotion": "^10.0.33",
+    "dotenv": "^8.2.0",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.10.4",
     "next": "^9.4.4",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "styled-jsx": "^3.3.0"
