--- a/jumble/.vscode/launch.json
+++ b/jumble/.vscode/launch.json
@@ -1,13 +1,27 @@
 // https://nextjs.org/docs/advanced-features/debugging
+// https://dev.to/spe_/debugging-next-js-applications-46b6
 {
   "version": "0.2.0",
   "configurations": [
     {
       "type": "node",
       "request": "attach",
-      "name": "Launch Program",
+      "name": "Launch Next.js",
       "skipFiles": ["<node_internals>/**"],
       "port": 9229,
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Chrome",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}"
+    },
+  ],
+  "compounds": [
+    {
+      "name": "Debug Next.js + Chrome",
+      "configurations": ["Launch Next.js", "Launch Chrome"]
     }
   ]
 }
