--- a/jumble/package.json
+++ b/jumble/package.json
@@ -29,6 +29,7 @@
     "graphql-tag": "^2.10.4",
     "json-server": "^0.16.1",
     "next": "^9.4.4",
+    "nookies": "^2.3.2",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-cookie": "^4.0.3",
