--- a/jumble/package.json
+++ b/jumble/package.json
@@ -34,6 +34,7 @@
     "react-apollo": "^3.1.5",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.3.2",
     "styled-jsx": "^3.3.0"
   },
   "devDependencies": {
